load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@//:build/wd_api_bundle.bzl", "wd_api_bundle")

ts_config(
  name = "node@tsconfig",
  src = ":tsconfig.json",
)

ts_project(
  name = "node",
  tsconfig= "node@tsconfig",
  srcs = glob(["**/*.ts"]),
)

wd_api_bundle(
  name = "bundle",
  id = "0xbcc8f57c63814005",
  const_name = "nodeBundle",
  include_prefix = "node",
  modules = {
    ":buffer.js": "node:buffer",
    ":internal/bufferImpl.js": "node-internal:bufferImpl",
  },
)
